# image_processor

./: .gitmodules  README.md  SCORE.md
tasks/image_processor/: CMakeLists.txt  README_.md  base.h  crop.cpp  edge_detection.cpp  exceptions.h  filter.cpp  filter.h  grayscale.cpp  greyscale.cpp  image.cpp  image.h  image_processor.cpp  main.cpp  negative.cpp  parser.cpp  parser.h  sharpening.cpp
tasks/image_processor/filters/: blur.cpp  crop.cpp  edge_detection.cpp  glass.cpp  greyscale.cpp  negative.cpp  sharpening.cpp
tasks/image_processor/filters/blur/: blur.cpp  blur.h
tasks/image_processor/filters/crop/: crop.cpp  crop.h
tasks/image_processor/filters/edge_detection/: edge_detection.cpp  edge_detection.h
tasks/image_processor/filters/general_filter/: filter.cpp  filter.h
tasks/image_processor/filters/glass/: glass.cpp  glass.h
tasks/image_processor/filters/grayscale/: greyscale.cpp  greyscale.h
tasks/image_processor/filters/negative/: negative.cpp  negative.h
tasks/image_processor/filters/sharpening/: sharpening.cpp  sharpening.h
tasks/image_processor/image_creation/: image.cpp  image.h
tasks/image_processor/parser/: parser.cpp  parser.h
tasks/is_leap/: is_leap.cpp
tasks/next_even/: next_even.cpp
tasks/scorer/: readme.md
