add_executable(
    image_processor
        image.cpp
        image.h
        filter.cpp
        filter.h
        filters/crop.cpp
        filters/greyscale.cpp
        filters/negative.cpp
        filters/sharpening.cpp
        filters/edge_detection.cpp
        image_processor.cpp
        parser.cpp
        parser.h
        filters/blur.cpp
        filters/glass.cpp
)
