add_executable(
    image_processor
        image_creation/image.cpp
        filters/general_filter/filter.cpp
        filters/crop/crop.cpp
        filters/grayscale/greyscale.cpp
        filters/negative/negative.cpp
        filters/sharpening/sharpening.cpp
        filters/edge_detection/edge_detection.cpp
        image_processor.cpp
        parser/parser.cpp
        filters/blur/blur.cpp
        filters/glass/glass.cpp
)
